# AetherOS

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.sh  build_iso.sh  log.txt  run.sh
boot/: initrd.img-aetheros
configs/: busybox.config  kernel.config
configs/installer/: init  inittab
install/etc/systemd/system/: aetheros-hw-boot.service
install/lib/modules/6.11.9/: build  modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.order  modules.symbols
install/lib/modules/6.11.9/kernel/drivers/ata/: ahci.ko  libahci.ko
install/lib/modules/6.11.9/kernel/drivers/char/hw_random/: amd-rng.ko  intel-rng.ko  rng-core.ko  via-rng.ko
install/usr/lib/aetheros/: boot_hardware_detect.sh
kernel/: config.rs
kernel/config/: minimal.config
kernel/core/: main.rs
kernel/hal/: linux_compat.rs
kernel/linux/linux-6.11.9/include/linux/sched/: rusty.h
kernel/microkernel/: capability.rs  cpu.rs  hardware.rs  ipc.rs  lib.rs  memory.rs  mod.rs  performance.rs  scheduler.rs  security.rs
kernel/patches/: 0000-add-rusty-scheduler-header.patch  0001-add-rusty-scheduler-core.patch  0002-add-rusty-scheduler-fair.patch  0003-add-rusty-scheduler-definitions.patch  0004-add-rusty-scheduler-load-balancing.patch  0005-add-rusty-scheduler-sysfs.patch  01-scheduler-optimization.patch  02-memory-optimization.patch  03-io-optimization.patch
linux-6.13.1/: MAINTAINERS
linux-6.13.1/Documentation/devicetree/bindings/iio/light/: capella,cm36651.yaml
linux-6.13.1/drivers/iio/light/: cm36651.c
linux-6.13.1/drivers/input/keyboard/: tm2-touchkey.c
linux-6.13.1/drivers/mfd/: max77843.c  rt5033.c
linux-6.13.1/drivers/power/supply/: rt5033_battery.c  rt5033_charger.c
linux-6.13.1/drivers/regulator/: rt5033-regulator.c
linux-6.13.1/include/linux/mfd/: max77843-private.h  rt5033-private.h  rt5033.h
output/: System.map  config  linux-aether-6.11.9.tar.xz
patches/: 0001-performance-optimizations.patch  0002-security-enhancements.patch
scripts/: build.sh  build_aetheros.sh  build_busybox.sh  build_initramfs.sh  build_iso.sh  build_kernel.sh  build_musl.sh  build_system.sh  build_with_limits.sh  common.sh  create_initramfs.sh  create_iso.sh  hardware_detect.sh  install_deps.sh  install_hardware_detect.sh  installer.sh  log.txt  patch_manager.sh  run_qemu.sh  setup.sh  setup_deps.sh  test.sh  test_kernel_build.sh
(+1 files in other folders)
