[package]
name = "aetheros"
version = "0.1.0"
edition = "2021"
authors = ["AetherOS Team"]
description = "High-performance, minimalist microkernel with Linux driver compatibility"

[lib]
name = "aetheros"
path = "kernel/microkernel/lib.rs"

[dependencies]
spin = "0.9"
bitflags = "2.4"
volatile = "0.4"
x86_64 = "0.14"
uart_16550 = "0.3"
pic8259 = "0.10"
pc-keyboard = "0.7"
linked_list_allocator = "0.10"
raw-cpuid = "11.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
lazy_static = "1.4"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86 = "0.52"
acpi = "5.0"
aml = "0.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
debug = false
strip = true
overflow-checks = false

[profile.dev]
opt-level = 1
debug = true
